--- a/Resume LaTeX/sample.tex
+++ b/Resume LaTeX/sample.tex
@@ -145,19 +145,19 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Porter}{Strathmore Bagels}{November 2020 -- February 2021}{Ronkonkoma, NY}
-\begin{itemize}
-\item Restocked the fridges and freezers
-\item Cleaned the entire store
-\end{itemize}
-
-\divider
-
 \cvevent{Pool Maintenance}{AquaBella Pools}{May 2023 -- August 2023}{MillerPlace, NY}
 \begin{itemize}
 \item Traveled from customer to customers homes
 \item Monitored filters, pool levels, chemicals, and other pool maintenance needs
 \item Handle personal requests from customers and act accordingly
+\end{itemize}
+
+\divider
+
+\cvevent{Porter}{Strathmore Bagels}{November 2020 -- February 2021}{Ronkonkoma, NY}
+\begin{itemize}
+\item Restocked the fridges and freezers
+\item Cleaned the entire store
 \end{itemize}
 
 \cvsection{Projects}
@@ -251,11 +251,8 @@
 
 \divider
 
-\cvref{Prof.\ Gamma Delta}{Institute}{g.delta@university.edu}
+\cvref{Prof.\ Kimia Keshanian}{University of Tampa}{kkeshanian@ut.edu}
 %{Address Line 1\\Address line 2}
-\divider
-
-\cvref{Prof.\ Gamma Delta}{Institute}{g.delta@university.edu}
 
 \cvsection{Skills}
 
@@ -267,6 +264,7 @@
 \cvtag{Web Scraping}
 \cvtag{Excel}
 \cvtag{Cisco}
+\cvtag{Git}
 \cvtag{Scratch}
 
 \divider\smallskip
